Fixing issue where product browse filters disappear between viewports - WSF-5132, tiles overlapping

--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -77,9 +77,11 @@ $filter-drop-down-width: 285;
   /* Increase top margin at this breakpoint */
   @include respond-min($non-palm) {
     @include to-rem(margin-top, $spacing-base);
+  }
 
-    // Inline script set by the mobile viewport when the filters are set to a 'closed' state. Requires override.
-    //.drop-down-container > .drop-down-menu__target {display: block !important;}
+  /* Inline script set by the palm viewport when the filters are set to be hidden, requires override at this breakpoint */
+  @include respond-min($lap-lrg) {
+    .drop-down-menu__target {display: block !important;}
   }
 }
 
